# Vox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: cube.frag  main.frag  main.vert  skybox.vert
cmake/: dependencies.cmake
src/: Application.cpp  Application.h  Debug.h  Renderer.cpp  Renderer.h  SkyBox.cpp  SkyBox.h  main.cpp
src/Application/: Application.cpp  Application.h  Input.cpp  Inputs.cpp  Inputs.h  Renderer.cpp  Renderer.h  Time.cpp  Time.h  Timer.cpp  Timer.h  Window.cpp
src/Core/: Chunk.cpp  Chunk.h  Scene.cpp  Scene.h  Voxel.cpp  Voxel.h
src/Render/: Camera.cpp  Camera.h  DebugCallBack.cpp  IndexBuffer.h  Program.cpp  Program.h  SkyBox.cpp  SkyBox.h  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp
src/app/: Application.cpp  Application.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Time.cpp  UI.cpp  UI.h  Window.cpp  Window.h
src/controller/: CameraController.cpp  CameraController.h  Controller.h  Controllers.cpp  Controllers.h  RendererController.cpp  RendererController.h
src/core/: Application.cpp  Application.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Inputs.cpp  Inputs.h  Keys.h  Renderer.cpp  Renderer.h  UI.cpp  UI.h  Voxel.cpp  Voxel.h  Window.cpp  Window.h
src/graphics/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  DebugCallBack.h  Program.h  RenderCommand.cpp  RenderCommand.h  Renderable.h  Renderer.cpp  Renderer.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h
src/opengl/: DebugCallBack.cpp  IndexBuffer.cpp  IndexBuffer.h  Program.cpp  Program.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/voxel/: Chunk.h  Cube.cpp  Cube.h  Scene.cpp  Scene.h  World.cpp  World.h
